--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "basicConcepts.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ./#server/express-server.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,15 @@
   "bugs": {
     "url": "https://github.com/bamfl/nodejs/issues"
   },
-  "homepage": "https://github.com/bamfl/nodejs#readme"
+  "homepage": "https://github.com/bamfl/nodejs#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.3",
+    "morgan": "^1.10.0"
+  }
 }
